code completed, rainbow effect implemented

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="button-container">
         <button id="new">New Grid</button>
         <button id="clear">Clear</button> 
+        <button id="rainbow">Rainbow</button> 
     </div>
     <div class="gridContainer"></div>
    
